Passes spec for initializing Player constructor

--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
     <div class="container">
       <h1>Tic Tac Toe Game</h1>
 
-      
+      <table>
+        <tr>
+          <td class="row" id="1"></td>
+          <td class="row" id="2"></td>
+          <td class="row" id="3"></td>
+        </tr>
+        <tr>
+          <td class="row" id="4"></td>
+          <td class="row" id="5"></td>
+          <td class="row" id="6"></td>
+        </tr>
+        <tr>
+          <td class="row" id="7"></td>
+          <td class="row" id="8"></td>
+          <td class="row" id="9"></td>
+        </tr>
+      </table>
+
+
     </div>
   </body>
 </html>
