It passes spec for retuning message who starts the game

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
       <h1>Tic Tac Toe Game</h1>
 
+      <div id="starting-message"></div>
       <table>
         <tr>
           <td class="row" id="1"></td>
