--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/underscore.js"></script>
     <script src="js/scripts.js"></script>
     <title>Tic Tac Toe</title>
   </head>
