Passes spec for returning true if square is empty

--- a/index.html
+++ b/index.html
@@ -16,22 +16,31 @@
 
       <div id="starting-message"></div>
       <table>
+        <div class="first-row">
         <tr>
           <td class="row" id="1"></td>
           <td class="row" id="2"></td>
           <td class="row" id="3"></td>
         </tr>
+      </div>
+      <div class="second-row">
         <tr>
           <td class="row" id="4"></td>
           <td class="row" id="5"></td>
           <td class="row" id="6"></td>
         </tr>
+      </div>
+      <div class="third-row">
         <tr>
           <td class="row" id="7"></td>
           <td class="row" id="8"></td>
           <td class="row" id="9"></td>
         </tr>
+
+      </div>
       </table>
+      <button id="play">Play game</button>
+      <button id="reset">Start a new game</button>
 
 
     </div>
