Checks for the first row winner

--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
       </div>
       </table>
 
-      <button id="play">Play game</button>
-
-      <button id="reset">Start a new game</button>
-
+      <button id="play">Start a new game</button>
 
     </div>
   </body>
